@@ -588,6 +588,7 @@ class MP_Gateway_Paypal_Express extends MP_Gateway_API {
               'FR'	=> 'France',
               'DE'	=> 'Germany',
               'HK'	=> 'Hong Kong',
+              'IE'	=> 'Ireland',
               'IL'	=> 'Israel',
               'IT'	=> 'Italy',
               'JP'	=> 'Japan',
@@ -1246,6 +1247,7 @@ function psts_pe_network_gateway_settings_box($settings) {
             'FR'	=> 'France',
             'DE'	=> 'Germany',
             'HK'	=> 'Hong Kong',
+            'IE'	=> 'Ireland',
             'IL'	=> 'Israel',
             'IT'	=> 'Italy',
             'MX'	=> 'Mexico',
