@@ -5,6 +5,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+- Fixed a rounding error with Paypal chained and Tax Inclusive pricing
+- Add support for Ireland locale in paypal and not require postal code
+- Add support for CAD, EUR and GBP to Authorize.net AIM gateway
+
 2.8.7 - 5/24/2013 - Aaron
 ----------------------------------------------------------------------
 - Make order and payment history times adjust dynamically for the site timezone
